# tensor_compiler

./: .gitignore  CMakeLists.txt  implementation-notes.md  tensor-compiler-design.md
docs/: hosting.md  project-status.md  ui-backend-hosting-plan.md
include/tc/: analyze.hpp  buffer_reuse.hpp  codegen.hpp  fusion.hpp  graph.hpp  loop_ir.hpp  lower.hpp  ops.hpp  passes.hpp  printer.hpp  runtime.hpp  types.hpp
src/: analyze.cpp  buffer_reuse.cpp  codegen.cpp  fusion.cpp  graph.cpp  loop_ir.cpp  lower.cpp  ops.cpp  passes.cpp  printer.cpp  runtime.cpp
tests/: test_m0.cpp  test_m1.cpp  test_m2.cpp  test_m3.cpp  test_m4.cpp  test_m5.cpp
